Use USBasp programmer

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -37,8 +37,8 @@ DANGEROUS=0
 
 # PROGRAMMER contains AVRDUDE options to address your programmer
 # PROGRAMMER = -c pony-stk200
-# PROGRAMMER = -c usbasp
-PROGRAMMER = -c usbtiny
+PROGRAMMER = -c usbasp -B 10
+# PROGRAMMER = -c usbtiny
 
 #  since USBaspLoader supports HAVE_BLB11_SOFTW_LOCKBIT...
 LOCKOPT = -U lock:w:0x3f:m
